--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,15 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Temporary vim files
+*~
+*.swp
+*.swo
+
+# Text backup files
+*.bak
+
+# Database
+*.sqlite3
+
